Bug 163484 - Treeview not maximized in the Stylist
Summary: Treeview not maximized in the Stylist
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
: 163499 163542 (view as bug list)
Depends on:
Blocks: Qt6
  Show dependency treegraph
 
Reported: 2024-10-17 09:46 UTC by Heiko Tietze
Modified: 2024-11-02 08:42 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (113.23 KB, image/png)
2024-10-17 09:46 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2024-10-17 09:46:29 UTC
Created attachment 197108 [details]
Screenshot

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0a6029ba428269e75b67c0861bd9bd1f804dfc79
CPU threads: 32; OS: Linux 6.11; UI render: default; VCL: kf6 (cairo+xcb)
Locale: de-DE (en_US.UTF-8); UI: en-US
Calc: threaded

No problem with gtk3 but gen and qt.
Comment 1 Xisco Faulí 2024-10-17 09:48:05 UTC
Regression introduced by:

commit 7f42f031ed1b9f374f3fcba9c814dc5862492026	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Thu Oct 10 09:39:14 2024 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Wed Oct 16 07:38:45 2024 +0200
tree 96c46bce70ed5538f884e5aacf1357fcc5a7632c
parent 34b95e12a839cbcf4818bbb0b2ce26b85999e856 [diff]

tdf#100894 speed up style tree creation

Bisected with: bibisect-linux64-25.2
Comment 2 Michael Weghorn 2024-10-18 08:23:57 UTC
*** Bug 163499 has been marked as a duplicate of this bug. ***
Comment 3 Buovjaga 2024-10-20 12:51:28 UTC
*** Bug 163542 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2024-10-21 14:57:54 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a61fa94f70409b7c86ea7a006a784a26a2a3da84

tdf#163484 Treeview not maximized in the StyleList

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.