tdf#163484 Treeview not maximized in the StyleList

regression from
    commit 7f42f031ed1b9f374f3fcba9c814dc5862492026
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Oct 10 09:39:14 2024 +0200
    tdf#100894 speed up style tree creation

Change-Id: I953c2765090cfa56c7926c4cc10534f6ce60237b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175330
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins